k8s/apigateway.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw-deploy
  namespace: tfm-dev-amartinm82
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: apigw
  replicas: 1
  template:
    metadata:
      labels:
        app: apigw
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 1001
      containers:
      - name: apigw
        image: amartinm82/tfm-apigw:trunk
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8444

---
apiVersion: v1
kind: Service
metadata:
  name: apigw-service
  namespace: tfm-dev-amartinm82
  labels:
    app: apigw
  annotations:
    dev.okteto.com/auto-ingress: 'false'
spec:
  ports:
  - port: 8444
    targetPort: 8444
    protocol: TCP
    name: apigw-port
  selector:
    app: apigw
  type: ClusterIP
